<resources>
    <string name="app_name" translatable="false">CLIPS</string>
    <string name="splash_icon_desc">The app icon</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu -->
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="menu_developer">Developer area</string>
    <string name="mapManager">Map Manager</string>

    <string name="title_activity_developer_unlocker">Developer login</string>
    <string name="prompt_code">Please insert developer code</string>
    <string name="action_login">Login</string>
    <string name="title_activity_main_developer">Your logs</string>
    <string name="action_beacon_power_area">Beacon Power Area</string>
    <string name="title_activity_logging">New log</string>
    <string name="title_activity_beacon_power_area">Beacon Power Area</string>
    <string name="dialog_title_dev_code_error">Sorry!</string>
    <string name="dialog_dev_code_error">Wrong code.</string>
    <string name="dialog_title_not_updated_map">Do you want to update map?</string>
    <string name="dialog_not_updated_map">It seems that your map for this building isn\'t up to
        date.An updated map is needed to use the navigation functionality of this app.
    </string>
    <string name="dialog_title_map_not_found">Download map?</string>
    <string name="dialog_map_not_found">It seems that you haven\'t the map for the current building.
    </string>
    <string name="dialog_title_bluetooth_not_enabled">Enable Bluetooth?</string>
    <string name="dialog_bluetooth_not_enabled">Bluetooth connectivity is needed to use the
        navigation functionality of this app.
    </string>
    <string name="dialog_title_position_not_enabled">Enable geolocalization?</string>
    <string name="dialog_position_not_enabled">Geolocalization is needed to use the
        navigation functionality of this app.
    </string>
    <string name="dialog_title_connection_not_enabled">Enable Wi-Fi?</string>
    <string name="dialog_connection_not_enabled">Wi-Fi is needed to use the
        navigation functionality of this app.
    </string>
    <string name="dialog_title_no_beacon_seen">No beacon seen</string>
    <string name="ok" translatable="false">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="title_activity_nearby_poi">Nearby</string>
    <string name="title_activity_log_information">Log Details</string>
    <string name="search_hint">Search inside the building</string>
    <string name="title_activity_navigation">Instructions</string>
    <string name="no_result_found">No result found</string>

    <string name="title_activity_local_map">Your Maps</string>
    <string name="title_activity_preferences">Preferences</string>

    <!-- Preferences strings -->
    <string name="default_path_preferences">Fastest</string>
    <string name="elevator_path_preferences">Elevator</string>
    <string name="stair_path_preferences">Stair</string>
    <string name="default_instruction_preferences">Default</string>
    <string name="tts_instruction_preferences">Text to speech</string>
    <string name="sonar_instruction_prefereces">Sonar</string>
    <string name="navigation_preferences">Navigation Preferences</string>
    <string name="path_preferences">Path preferences</string>
    <string name="instruction_preferences">Instruction preferences</string>

    <!-- NoConnectionAlertHelp -->
    <string name="no_connection_title_alert_help">Internet not available</string>
    <string name="no_connection_message_alert_help">
        Check your internet connectivity and try again.
    </string>
    <string name="no_connection_photo_alert">Photos may be not updated.</string>
    <string name="retry_alert_help">Retry</string>
    <string name="cancel_alert_help">Cancel</string>
    <string name="navigation_internet_alert">Internet not available. The map of the building could
        be not updated and the information displayed not correct
    </string>

    <string name="all_pois">All places</string>

    <!--for description-->
    <string name="name">Name</string>
    <string name="floor">Floor</string>
    <string name="ground_floor">Ground floor</string>
    <string name="category">Category</string>
    <string name="description">Description</string>

    <!--LocalMapManager-->
    <string name="update_map">Update Map</string>
    <string name="updated_map">Updated Map</string>
    <string name="delete_map">Delete Map</string>
    <string name="remove_map_question">Do you really want to delete the selected map?</string>
    <string name="already_updated_map">Map already update</string>
    <string name="update_map_question">Do you really want to update the selected map?</string>

    <!--RemoteMapManager-->
    <string name="title_activity_remote_map_manager">Download new maps</string>
    <string name="remote_map_already_downloaded">Map already downloaded</string>
    <string name="no_nearby_building_message">No nearby buildings</string>
    <string name="map_internet_alert">You can not download any map because there is no internet connection available</string>

    <!--MapDownload-->
    <string name="map_download">Downloading map</string>
    <string name="map_downloaded">Map downloaded</string>
    <string name="map_download_title">Map download</string>

    <!--AlertPathError-->
    <string name="wrong_path">Wrong path</string>
    <string name="wrong_path_question">It seems that you have taken the wrong path, want to
        calculate a new route?
    </string>
    <string name="recalculate">Recalculate</string>
    <string name="back_to_home">Back to the home</string>

    <!--AlertDeleteLog-->
    <string name="delete_log_question">Do you really want delete this log?</string>

    <!--LoggingActivity-->
    <string name="beacon_waiting">Waiting for nearby beacons...</string>

    <!--HelpActivity-->
    <string name="title_activity_help">Help</string>
</resources>
