<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_developer"
                android:icon="@drawable/icon_menu_developer"
                android:title="@string/menu_developer"/>
        <item
                android:id="@+id/settings"
                android:icon="@drawable/icon_setting"
                android:title="@string/settings"/>
        <item
                android:id="@+id/help"
                android:icon="@drawable/icon_help"
                android:title="@string/help"/>

        <item
                android:id="@+id/allpois"
                android:icon="@drawable/icon_all_pois"
                android:title="@string/all_pois"/>
    </group>

</menu>
